--- a/ProfSite/Views/BravoVets/support.cshtml
+++ b/ProfSite/Views/BravoVets/support.cshtml
@@ -198,8 +198,14 @@
                     With 69% of online adults (that's about half of the entire adult US population)
                     using an online social network<sup>2</sup> - it's a business imperative to make your presence known.
                 </p>
-                <a href="#">LINK TO FACEBOOK</a>
-                <a href="#">LINK TO TWITTER</a>
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="#">LINK TO FACEBOOK</a>
+                    </div>
+                    <div class="col-md-6">
+                        <a href="#">LINK TO TWITTER</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -262,14 +268,14 @@
 <div class="container">
     <div class="row">
         <p>
-            * BRAVECTO is effective against Rhipicephalus sanguineus (brown dog tick) for 8 weeks after dosing.
+            <sup>*</sup> BRAVECTO is effective against <span class="italic">Rhipicephalus sanguineus</span> (brown dog tick) for 8 weeks after dosing.
             The most common adverse reactions were mild and short-lived vomiting, decreased appetite, diarrhea and drooling. For complete safety information, refer to product label.
         </p>
         <p>
-            1 Orsini P, Drolet D, Liu C. Pet projects: digital connects pet owners to brands. eMarketer. July 2013.
+            <sup>1</sup> Orsini P, Drolet D, Liu C. Pet projects: digital connects pet owners to brands. eMarketer. July 2013.
         </p>
         <p>
-            2 Rainie L, Smith A, Duggan M. Coming and going on Facebook. Pew Internet & American Life Project. 2013. A project of the PewResearchCenter, Washington, DC.
+            <sup>2</sup> Rainie L, Smith A, Duggan M. Coming and going on Facebook. Pew Internet & American Life Project. 2013. A project of the PewResearchCenter, Washington, DC.
         </p>
     </div>
 </div>
