--- a/ProfSite/Content/bravectohome.css
+++ b/ProfSite/Content/bravectohome.css
@@ -279,9 +279,11 @@ a.orange:hover {
 .jumbotron.aboutus .jumbo-home-overlay {
     top: 217px;
 }
-.jumbotron.unlinkedaccounts-page .jumbo-home-overlay{
+
+.jumbotron.unlinkedaccounts-page .jumbo-home-overlay {
     top: 267px;
 }
+
 .jumbo-home-overlay .top-jumbo-overlay {
     padding: 20px 0;
     margin: 0;
@@ -655,23 +657,64 @@ a.orange:hover {
     margin-top: 100px;
 }
 
-    .static-body.resources-body.grey {
+    .static-body.resources-body.nomargin {
+        margin-top: 0;
+    }
+
+    .static-body.resources-body.lightgrey {
         background-color: #efefef;
     }
 
-    .static-body.resources-body p {
-        text-align: left;
+    .static-body.resources-body.darkgrey {
+        background-color: #E8E8E8;
     }
 
-    .static-body.resources-body h2 {
+.resource-searchrow input.form-control {
+    padding: 10px 12px;
+    height: 45px;
+    font-size: 20px;
+    position:relative;
+    padding-right:45px;
+}
+.resource-searchrow .form-group {
+    position:relative;
+}
+.resource-searchrow .form-control-feedback {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    z-index: 2;
+    display: block;
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    pointer-events: none;
         color: #009994;
-        margin-bottom: 20px;
-        text-align: left;
-    }
+    font-size:20px;
+}
 
-    .static-body.resources-body h3 {
-        color: #009994;
-    }
+.resource-searchrow .form-control::-webkit-input-placeholder {
+    color: #009994;
+}
+
+.static-body.resources-body.grey {
+    background-color: #EEE;
+}
+
+.static-body.resources-body p {
+    text-align: left;
+}
+
+.static-body.resources-body h2 {
+    color: #009994;
+    margin-bottom: 20px;
+    text-align: left;
+}
+
+.static-body.resources-body h3 {
+    color: #009994;
+}
 
 .resources-body .checkbox-wrapper {
     margin: 5px 0;
@@ -720,7 +763,7 @@ a.orange:hover {
     float: left;
     min-height: 220px;
     position: relative;
-    width:270px;
+    width: 270px;
 }
 
     .resources-list .resource-item .resource-content .action-wrapper {
@@ -935,9 +978,11 @@ a.orange:hover {
 .static-body.unlinkedaccounts-body p {
     text-align: left;
 }
+
     .static-body.unlinkedaccounts-body p.text-center {
-        text-align:center;
+        text-align: center;
     }
+
 .unlinkedaccounts-body .link-youraccount {
     padding-left: 40px;
 }
