links update and logo switch between linked or UnLinkedAccounts

--- a/ProfSite/Views/Facebook/NoLinkedAccount.cshtml
+++ b/ProfSite/Views/Facebook/NoLinkedAccount.cshtml
@@ -3,10 +3,10 @@
     <hr class="plus diagonal">
     <p>Yes, it’s big—over 1.25 billion members, and growing. But it’s not the sheer size of Facebook that makes it interesting for small business owners; it’s the probability that your audience, pet owners in your community, are participating on this busiest of all social networks. Facebook allows you to reach, connect and create deeper relationships with your customers by communicating the sort of information that demonstrates your clinic’s expertise, knowledge and caring on a personal, one-to-one level—something no other marketing media can do.</p>
     <div class="hidden-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Edit Your Profile To Link To Your Facebook Account</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Edit Your Profile To Link To Your Facebook Account</a>
     </div>
     <div class="visible-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Link Your Facebook Account</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Link Your Facebook Account</a>
     </div>
     <h3>Setting Up a Facebook Page</h3>
     <hr class="plus diagonal">
