--- a/ProfSite/Views/Globalization/es-ES/Twitter/NoLinkedAccount.cshtml
+++ b/ProfSite/Views/Globalization/es-ES/Twitter/NoLinkedAccount.cshtml
@@ -6,10 +6,10 @@
     <p>Identificar tu marca y a ti mismo como una autoridad. Cuando publicas un “tweet”, otros pueden ver y difundir tus palabras.</p>
     <p>Mantenerte informado sobre las últimas noticias y tendencias en tu campo siguiendo a los expertos y a las fuentes de noticias sobre salud animal.</p>
     <div class="hidden-xs">
-        <a href="/editprofileandfacility" class="btn btn-tweet no-icon">Edite tu perfil para vincular tu cuenta de Twitter</a>
+        <a href="/editprofile" class="btn btn-tweet no-icon">Edite tu perfil para vincular tu cuenta de Twitter</a>
     </div>
     <div class="visible-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Enlace su Cuenta de Twitter</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Enlace su Cuenta de Twitter</a>
     </div>
     <h3>Creación de una cuenta de Twitter</h3>
     <hr class="plus diagonal">
