--- a/ProfSite/Views/Globalization/fr/Facebook/NoLinkedAccount.cshtml
+++ b/ProfSite/Views/Globalization/fr/Facebook/NoLinkedAccount.cshtml
@@ -3,10 +3,10 @@
     <hr class="plus diagonal">
     <p>Oui c'est assez &eacute;norme : plus d'1,25 milliards de membres, et cela augmente sans cesse. Mais ce n'est pas la taille de Facebook qui le rend int&eacute;ressant pour les PME : c'est plut&ocirc;t la probabilit&eacute; que votre public, les propri&eacute;taires d'animaux, soit pr&eacute;sent sur le plus important des r&eacute;seaux sociaux. Facebook vous permet d'atteindre, de vous connecter et de cr&eacute;er une relation forte avec vos clients. Cela en communiquant des informations qui t&eacute;moignent de votre expertise, de vos comp&eacute;tences et les soins apport&eacute;s- ce qu'aucun autre m&eacute;dia marketing ne peut faire.</p>
     <div class="hidden-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Editez votre profil pour le lier &agrave; votre page Facebook</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Editez votre profil pour le lier &agrave; votre page Facebook</a>
     </div>
     <div class="visible-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Link Your Facebook Account</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Link Your Facebook Account</a>
     </div>
     <h3>Pour commencer : cr&eacute;er une page Facebook</h3>
     <hr class="plus diagonal">
