--- a/ProfSite/Views/Globalization/fr/Twitter/NoLinkedAccount.cshtml
+++ b/ProfSite/Views/Globalization/fr/Twitter/NoLinkedAccount.cshtml
@@ -6,10 +6,10 @@
     <p>Faites de vous et de votre marque une r&eacute;f&eacute;rence. Lorsque vous tweetez, les autres vous &eacute;coutent et propagent vos messages.</p>
     <p>Soyez au courant des derni&egrave;res informations et tendances de votre secteur en suivant les experts ou toute autre source en sant&eacute; animale.</p>
     <div class="hidden-xs">
-        <a href="/editprofileandfacility" class="btn btn-tweet no-icon">Editez votre profil pour le lier &agrave; votre compte Twitter</a>
+        <a href="/editprofile" class="btn btn-tweet no-icon">Editez votre profil pour le lier &agrave; votre compte Twitter</a>
     </div>
     <div class="visible-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Lier votre compte Twitter</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Lier votre compte Twitter</a>
     </div>
     <h3>Cr&eacute;er un compte Twitter</h3>
     <hr class="plus diagonal">
