--- a/ProfSite/Views/Globalization/ru/Facebook/NoLinkedAccount.cshtml
+++ b/ProfSite/Views/Globalization/ru/Facebook/NoLinkedAccount.cshtml
@@ -3,10 +3,10 @@
     <hr class="plus diagonal">
     <p>Да, он велик — более 1,25 миллиардов пользователей — и растет с каждым днем. Но не сам по себе масштаб Facebook делает его интересным для владельцев малого бизнеса, а вероятность того, что ваша аудитория — владельцы домашних животных, живущие в вашем районе — тоже пользуются этой самой активной из всех социальных сетей. Facebook позволяет связываться с клиентами, находить с ними общий язык и выстраивать более глубокие отношения, сообщая им информацию, демонстрирующую опыт вашей клиники, ваши знания и заботу на личном уровне — один на один — что недостижимо с помощью других средств маркетинга.</p>
     <div class="hidden-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Отредактируйте свой профиль, чтобы связать его со своей страницей в Facebook</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Отредактируйте свой профиль, чтобы связать его со своей страницей в Facebook</a>
     </div>
     <div class="visible-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Свяжите свой аккаунт на Facebook</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Свяжите свой аккаунт на Facebook</a>
     </div>
     <h3>Создание страницы в Facebook</h3>
     <hr class="plus diagonal">
