--- a/ProfSite/Views/Globalization/ru/Twitter/NoLinkedAccount.cshtml
+++ b/ProfSite/Views/Globalization/ru/Twitter/NoLinkedAccount.cshtml
@@ -6,10 +6,10 @@
     <p>Зарекомендовать себя и свою клинику как авторитетный бренд. Когда вы отправляете сообщения в Twitter, другие читают и распространяют ваши слова по всей сети.</p>
     <p>Будьте в курсе последних новостей и тенденций в своей области — следите за сообщениями ветеринарных экспертов и СМИ.</p>
     <div class="hidden-xs">
-        <a href="/editprofileandfacility" class="btn btn-tweet no-icon">Отредактируйте свою учетную запись, чтобы связать ее с профилем в Twitter</a>
+        <a href="/editprofile" class="btn btn-tweet no-icon">Отредактируйте свою учетную запись, чтобы связать ее с профилем в Twitter</a>
     </div>
     <div class="visible-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Свяжите свой аккаунт Twitter</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Свяжите свой аккаунт Twitter</a>
     </div>
     <h3>Создание страницы в Twitter</h3>
     <hr class="plus diagonal">
