--- a/ProfSite/Views/Globalization/za/Twitter/NoLinkedAccount.cshtml
+++ b/ProfSite/Views/Globalization/za/Twitter/NoLinkedAccount.cshtml
@@ -6,10 +6,10 @@
     <p>Establish yourself and your brand as an authority. When you tweet, others listen, and spread your words far and wide.</p>
     <p>Stay up to date on the latest news and trends in your field by following the experts and news sources in animal health.</p>
     <div class="hidden-xs">
-        <a href="/editprofileandfacility" class="btn btn-tweet no-icon">Edit Your Profile To Link To Your Twitter Account</a>
+        <a href="/editprofile" class="btn btn-tweet no-icon">Edit Your Profile To Link To Your Twitter Account</a>
     </div>
     <div class="visible-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Link Your Twitter Account</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Link Your Twitter Account</a>
     </div>
     <h3>Setting Up a Twitter Account</h3>
     <hr class="plus diagonal">
