--- a/ProfSite/Views/Shared/_Layout_SubHeader.cshtml
+++ b/ProfSite/Views/Shared/_Layout_SubHeader.cshtml
@@ -8,7 +8,7 @@
                 <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                     <ul class="nav navbar-nav navbar-userinfo navbar-right">
                         <li>
-                            <a href="/EditProfileAndFacility/">@bvResources.Shared_Layout_SubHeaderEditProfile</a>
+                            <a href="/editprofile/">@bvResources.Shared_Layout_SubHeaderEditProfile</a>
                         </li>
                         <li>
                             <a href="/lfw20/pages/logout.aspx" class="arrow-right">@bvResources.Shared_Layout_SubHeaderSignOut</a>
