--- a/ProfSite/Views/Globalization/es/Facebook/NoLinkedAccount.cshtml
+++ b/ProfSite/Views/Globalization/es/Facebook/NoLinkedAccount.cshtml
@@ -3,10 +3,10 @@
     <hr class="plus diagonal">
     <p>Sí, Facebook es grande – más de 1.25 billones de miembros, y continúa creciendo. Pero no es el tamaño en sí de Facebook lo que lo hace interesante para dueños de pequeños negocios, es la probabilidad de que su audiencia, dueños de mascotas en su comunidad estén participando de ésta, la red social más activa. Facebook te permite llegar, conectar y crear relaciones más profundas con tus clientes.</p>
     <div class="hidden-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Edita tu perfil para vincular tu cuenta cuenta de facebook</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Edita tu perfil para vincular tu cuenta cuenta de facebook</a>
     </div>
     <div class="visible-xs">
-        <a href="/editprofileandfacility" class="btn btn-facebookpost no-icon">Enlazar su cuenta de Facebook</a>
+        <a href="/editprofile" class="btn btn-facebookpost no-icon">Enlazar su cuenta de Facebook</a>
     </div>
     <h3>Creación de una Página de Facebook</h3>
     <hr class="plus diagonal">
