--- a/ProfSite/Views/Bravecto/index.cshtml
+++ b/ProfSite/Views/Bravecto/index.cshtml
@@ -113,13 +113,13 @@
             <div class="container">
                 <div class="jumbo-home-overlay">
                     <div class="row top-jumbo-overlay">
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-xs-3">
                             <div id="tweleveweeks_container">
                                 <ul style="list-style:none;"></ul>
                             </div>
                             <h3 class="weeks">WEEKS</h3>
                         </div>
-                        <div class="col-md-9">
+                        <div class="col-md-9 col-xs-9">
                             <h1>Extend a game plan for the world's longest-lasting, chewable flea and tick protection.</h1>
                         </div>
                     </div>
