--- a/ProfSite/Views/BravoVets/products.cshtml
+++ b/ProfSite/Views/BravoVets/products.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Products";
     Layout = "~/Views/Shared/_LayoutBravovets.cshtml";
     ViewBag.DisplaySubnavigation = true;
+    ViewBag.SelectedNode = "products";
 }
 
 <div class="container">
@@ -13,11 +14,11 @@
     <div class="container">
         <div class="jumbo-home-overlay">
             <div class="row top-jumbo-overlay">
-                <h1>Extend the confort of reassurance to every breed.</h1>
+                <h1>Extend the comfort of reassurance to every breed.</h1>
             </div>
             <div class="bottom-jumbo-overlay">
                 <h4 class="text-center">
-                    Extend flea and tick protection up to 12 weeks with a single chew*
+                    Extend flea and tick protection up to 12 weeks with a single chew.*
                 </h4>
             </div>
         </div>
@@ -175,7 +176,8 @@
         <strong>Available in boxes of 1 or 2 chewables!</strong>
     </p>
     <div class="row simpleheaderrow">
-        <h2>PRESCRIBE THE LONGEST-LASTING CHEWABLE <br />DEFENSE AGAINST FLEA AND TICK INFESTATIONS</h2>
+        <h2>PRESCRIBE THE LONGEST-LASTING CHEWABLE<br /> PROTECTION FROM FLEA AND TICK INFESTATIONS.
+</h2>
         <p>
             Bravecto is a tasty chewable flea and tick treatment that gives dogs up to 12 weeks of protection
             against fleas and ticks. Covering a wide range -spectrum of fleas and ticks in every breed, Bravecto can be
