--- a/ProfSite/Views/BravoVets/products.cshtml
+++ b/ProfSite/Views/BravoVets/products.cshtml
@@ -176,11 +176,10 @@
         <strong>Available in boxes of 1 or 2 chewables!</strong>
     </p>
     <div class="row simpleheaderrow">
-        <h2>PRESCRIBE THE LONGEST-LASTING CHEWABLE<br /> PROTECTION FROM FLEA AND TICK INFESTATIONS.
-</h2>
+        <h2>PRESCRIBE THE LONGEST-LASTING CHEWABLE<br /> PROTECTION FROM FLEA AND TICK INFESTATIONS.</h2>
         <p>
             Bravecto is a tasty chewable flea and tick treatment that gives dogs up to 12 weeks of protection
-            against fleas and ticks. Covering a wide range -spectrum of fleas and ticks in every breed, Bravecto can be
+            against fleas and ticks. Covering a wide range of fleas and ticks in every breed, Bravecto can be
             used to treat dogs that already have infestations, as well as given as a preventative measure. It takes only about 2 hours for ectoparasites to
             start dying, and all are killed within 12 hours.
         </p>
